@@ -222,8 +222,7 @@
         				<outputEncoding>UTF-8</outputEncoding>
 				
 					<!-- permet la surcharge de maven-surefire-plugin tout en fonctionnant avec jacoco -->
-					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
-        						-Dfile.encoding=UTF-8</argLine>
+					<argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
 				
     			</configuration>
 
